# genesis_costo

./: Segnas.txt.txt  main.py  pyproject.toml
BBDD/: maestro.db
src/genesis/: main.py
src/genesis/data/: database.py
src/genesis/ui/: main_window.py
src/genesis/ui/auth/: login_dialog.py
src/genesis/ui/dashboard/: dashboard_view.py
src/genesis/ui/modules/maestro_crisol/: maestro_controller.py  maestro_views.py
src/genesis/ui/resources/: styles.qss
tests/: seed_from_json.py  test_db.py  users_seed.json
